# diff-nca

./: pyproject.toml
scripts/: emojis.py  nca_square.py  swiss_roll.py
src/nn/: ca.py  kernels.py
