[project]
name = "diff-nca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ema-pytorch>=0.7.7",
    "jupyter>=1.1.1",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "pytorch-ignite>=0.5.1",
    "scipy>=1.15.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
